--- a/css/community.css
+++ b/css/community.css
@@ -6,6 +6,10 @@
 @media (min-width: 1000px) {
   /* 헤더  */
   header {
+    overflow: hidden;
+  }
+
+  header .pc {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -18,27 +22,87 @@
     z-index: 5;
   }
 
-  header ul {
+  header .pc ul {
     display: flex;
     gap: 20px;
     align-items: center;
     font-size: 18px;
     font-family: "Freesentation-9Black";
   }
-  header h1 {
+  header .pc h1 {
     width: 70px;
     height: 70px;
   }
-  header h1 img {
+  header .pc h1 img {
     width: 100%;
     height: 100%;
   }
-  header .down i {
+  header .pc .down i {
     font-size: 13px;
     margin-left: 10px;
   }
+
+  header .menu_wrap {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  header .menu_wrap > ul {
+    width: 100%;
+    height: 100%;
+    padding: 300px 0px;
+    box-sizing: border-box;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    font-family: "Freesentation-9Black";
+    color: var(--color);
+    position: absolute;
+    top: 0;
+    right: -100%;
+    z-index: 11;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  header .menu_wrap > ul > li {
+    width: calc(100% / 5 - 30px);
+  }
+
+  header .menu_wrap > ul > li > a {
+    font-size: 30px;
+  }
+
+  header .menu_wrap .sub_menu {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 20px;
+    font-family: "Freesentation-8ExtraBold";
+  }
+
+  header .menu_wrap .close {
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    padding: 25px;
+    color: var(--color);
+  }
+  header .menu_wrap .sub_menu li:hover {
+    text-decoration: underline;
+  }
   header .mobile {
     display: none;
+  }
+
+  header.on .pc {
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(111, 115, 119, 0.2) 0px 8px 24px;
   }
 
   /* title */
@@ -365,6 +429,10 @@
 @media (min-width: 700px) and (max-width: 1000px) {
   /* 헤더  */
   header {
+    overflow: hidden;
+  }
+
+  header .pc {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -377,27 +445,87 @@
     z-index: 5;
   }
 
-  header ul {
+  header .pc ul {
     display: flex;
     gap: 20px;
     align-items: center;
     font-size: 18px;
     font-family: "Freesentation-9Black";
   }
-  header h1 {
+  header .pc h1 {
     width: 70px;
     height: 70px;
   }
-  header h1 img {
+  header .pc h1 img {
     width: 100%;
     height: 100%;
   }
-  header .down i {
+  header .pc .down i {
     font-size: 13px;
     margin-left: 10px;
   }
+
+  header .menu_wrap {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  header .menu_wrap > ul {
+    width: 100%;
+    height: 100%;
+    padding: 300px 0px;
+    box-sizing: border-box;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    font-family: "Freesentation-9Black";
+    color: var(--color);
+    position: absolute;
+    top: 0;
+    right: -100%;
+    z-index: 11;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  header .menu_wrap > ul > li {
+    width: calc(100% / 5 - 30px);
+  }
+
+  header .menu_wrap > ul > li > a {
+    font-size: 17px;
+  }
+
+  header .menu_wrap .sub_menu {
+    font-size: 15px;
+    line-height: 30px;
+    margin-top: 20px;
+    font-family: "Freesentation-8ExtraBold";
+  }
+
+  header .menu_wrap .close {
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    padding: 25px;
+    color: var(--color);
+  }
+  header .menu_wrap .sub_menu li:hover {
+    text-decoration: underline;
+  }
   header .mobile {
     display: none;
+  }
+
+  header.on .pc {
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(111, 115, 119, 0.2) 0px 8px 24px;
   }
 
   /* title */
@@ -723,6 +851,10 @@
   /* 헤더  */
   header {
     width: 100%;
+  }
+
+  header .mobile {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -732,26 +864,81 @@
     position: fixed;
     top: 0;
     z-index: 5;
-    background-color: #fff;
   }
-  header h1 {
-    width: 50px;
-    height: 50px;
+  header .mobile h1 {
+    width: 70px;
+    height: 70px;
   }
-  header h1 img {
+  header .mobile h1 img {
     width: 100%;
     height: 100%;
   }
 
-  header ul {
+  header .mobile ul {
     display: flex;
     align-items: center;
-    font-size: 25px;
+    font-size: 30px;
     gap: 20px;
+  }
+
+  header .menu_wrap {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  header .menu_wrap > ul {
+    width: 100%;
+    height: 100vh;
+    padding: 30px 0px;
+    box-sizing: border-box;
+    font-family: "Freesentation-9Black";
+    color: var(--color);
+    position: absolute;
+    top: 0;
+    right: -100%;
+    z-index: 11;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  header .menu_wrap > ul > li {
+    height: calc(100% / 5);
+  }
+  header .menu_wrap > ul > li > a {
+    font-size: 20px;
+  }
+
+  header .menu_wrap .sub_menu {
+    font-size: 15px;
+    line-height: 25px;
+    margin-bottom: 10px;
+    font-family: "Freesentation-8ExtraBold";
+  }
+
+  header .menu_wrap .close {
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    padding: 25px;
+    color: var(--color);
+  }
+  header .menu_wrap .sub_menu li:hover {
+    text-decoration: underline;
   }
 
   header .pc {
     display: none;
+  }
+
+  header.on .mobile {
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(111, 115, 119, 0.2) 0px 8px 24px;
   }
   /* title */
   .title {
@@ -1061,6 +1248,11 @@
   /* 헤더  */
   header {
     width: 100%;
+    overflow: hidden;
+  }
+
+  header .mobile {
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -1070,26 +1262,86 @@
     position: fixed;
     top: 0;
     z-index: 5;
-    background-color: #fff;
+    overflow: hidden;
   }
-  header h1 {
-    width: 50px;
-    height: 50px;
+  header .mobile h1 {
+    width: 70px;
+    height: 70px;
   }
-  header h1 img {
+  header .mobile h1 img {
     width: 100%;
     height: 100%;
   }
 
-  header ul {
+  header .mobile ul {
     display: flex;
     align-items: center;
-    font-size: 25px;
+    font-size: 30px;
     gap: 20px;
+    overflow: hidden;
+  }
+
+  header .menu_wrap {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  header .menu_wrap > ul {
+    width: 100%;
+    height: 100vh;
+    padding: 30px 0px;
+    box-sizing: border-box;
+    font-family: "Freesentation-9Black";
+    color: var(--color);
+    position: absolute;
+    top: 0;
+    right: -100%;
+    z-index: 11;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    overflow: hidden;
+  }
+  header .menu_wrap > ul > li {
+    height: calc(100% / 5);
+  }
+  header .menu_wrap > ul > li > a {
+    font-size: 20px;
+  }
+
+  header .menu_wrap .sub_menu {
+    font-size: 15px;
+    line-height: 25px;
+    margin-bottom: 10px;
+    font-family: "Freesentation-8ExtraBold";
+    overflow: hidden;
+  }
+
+  header .menu_wrap .close {
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    padding: 25px;
+    color: var(--color);
+    overflow: hidden;
+  }
+  header .menu_wrap .sub_menu li:hover {
+    text-decoration: underline;
   }
 
   header .pc {
     display: none;
+  }
+
+  header.on .mobile {
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(111, 115, 119, 0.2) 0px 8px 24px;
   }
   /* title */
   .title {
